--- a/packages/api-service/package.json
+++ b/packages/api-service/package.json
@@ -45,6 +45,7 @@
         "aws-embedded-metrics": "^2.0.5",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.30.1",
         "mysql2": "^3.11.3",
         "uuid": "^8.3.2"
     },
